теги удалены; каждая прошивка теперь должна иметь список плат на которые может быть загружена
