# docs/swagger.json
@@ -15,7 +15,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Get binary firmware file with given id",
+                "description": "Get binary firmware file with given id. Available for all authenticated users",
                 "summary": "Get binary file",
                 "parameters": [
                     {
@@ -39,12 +39,6 @@
                             "$ref": "#/definitions/main.HttpError"
                         }
                     },
-                    "403": {
-                        "description": "Access is denied",
-                        "schema": {
-                            "$ref": "#/definitions/main.HttpError"
-                        }
-                    },
                     "404": {
                         "description": "firmware for given repo and tags not found",
                         "schema": {
@@ -61,7 +55,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Get all firmwares",
+                "description": "Get all firmwares. Only for non-board users",
                 "produces": [
                     "application/json"
                 ],
@@ -96,7 +90,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Get all firmwares",
+                "description": "Get all firmwares. Only for non-board users",
                 "consumes": [
                     "application/json"
                 ],
@@ -144,7 +138,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Get latest firmware version for given repo and tags. Available for boards.",
+                "description": "Get latest firmware version for given repo and tags. Only for boards",
                 "produces": [
                     "application/json"
                 ],
@@ -154,12 +148,6 @@
                         "type": "string",
                         "description": "name of firmware's repo",
                         "name": "repo",
-                        "in": "query"
-                    },
-                    {
-                        "type": "array",
-                        "description": "one of tags that firmware should have, can be omitted",
-                        "name": "tags",
                         "in": "query"
                     }
                 ],
@@ -172,6 +160,12 @@
                     },
                     "401": {
                         "description": "Invalid auth token",
+                        "schema": {
+                            "$ref": "#/definitions/main.HttpError"
+                        }
+                    },
+                    "403": {
+                        "description": "Access is denied",
                         "schema": {
                             "$ref": "#/definitions/main.HttpError"
                         }
@@ -190,11 +184,19 @@
         "main.ApiAddFirmwareInfoRequest": {
             "type": "object",
             "required": [
+                "boards",
                 "built_at",
                 "commit_id",
                 "repo_name"
             ],
             "properties": {
+                "boards": {
+                    "type": "array",
+                    "minItems": 1,
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "built_at": {
                     "type": "integer"
                 },
@@ -208,9 +210,6 @@
                     "type": "string"
                 },
                 "sha256": {
-                    "type": "string"
-                },
-                "tag": {
                     "type": "string"
                 }
             }
@@ -233,6 +232,12 @@
         "main.ApiFirmwareInfoResponse": {
             "type": "object",
             "properties": {
+                "boards": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "built_at": {
                     "type": "integer"
                 },
@@ -259,9 +264,6 @@
                 },
                 "size": {
                     "type": "integer"
-                },
-                "tag": {
-                    "type": "string"
                 }
             }
         },
